# machinegnostics

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
docs/: CNAME  SECURITY.md  foundation.md  home.md  index.md  installation.md  license.md  usage.md
docs/da/: da_models.md  egdf.md  eldf.md  interval_analysis.md  qgdf.md  qldf.md
docs/javascripts/: mermaid-init.js
docs/mg/: principles.md
examples/: example_0_1_GDF.ipynb  example_0_2_gnostic_tests.ipynb  example_0_3_gnostic_cluster_analysis.ipynb  example_0_4_gnostic_interval_analysis.ipynb  example_0_5_gnostic_uncertainty_analysis.ipynb  example_1_1_small_data_linreg.ipynb  example_1_linreg.ipynb  example_1_lr.ipynb  example_2_1_small_data_polyreg.ipynb  example_2_linreg.ipynb  example_2_polyreg.ipynb  example_3_logreg.ipynb  example_4_logreg_mf.ipynb  example_4_poly_reg_mf.ipynb  example_magcal_01.ipynb  example_magcal_02.ipynb  example_magcal_03.ipynb  example_magcal_04.ipynb  example_magcal_05.ipynb  example_magcal_07.ipynb  example_magcal_08.ipynb  example_models_01.ipynb  example_models_02.ipynb  example_models_03.ipynb  example_models_04.ipynb  example_models_05.ipynb  example_models_06.ipynb  example_models_07.ipynb  example_models_08.ipynb  example_models_09.ipynb  example_models_11.ipynb  example_models_12.ipynb  example_models_15.ipynb  example_models_16.ipynb  example_models_17.ipynb
src/machinegnostics/: __init__.py
src/machinegnostics/data/: __init__.py  animals_data.py  anscombe_data.py  cls_data.py  forbes_data.py  linnerud_data.py  longley_data.py  moon_data.py  mtcars_data.py  puromycin_data.py  reg_data.py  stackloss_data.py  starwars_data.py
src/machinegnostics/integration/: mlflow.py  mlflow_flavor.py
src/machinegnostics/magcal/: __init__.py  base.py  characteristics.py  criteria_eval.py  criterion.py  data_conversion.py  distfucn.py  gacov.py  gcor.py  gcov.py  gmed.py  gmodulus.py  gvar.py  layer_base.py  layer_history.py  layer_history_base.py  layer_histroy_rob_reg.py  layer_io_process.py  layer_io_process_base.py  layer_io_process_rob_rig.py  layer_mlflow_rob_reg.py  layer_param_base.py  layer_param_rob_reg.py  layer_param_rreg.py  layer_parambase.py  layer_rob_reg.py  layer_rreg_mlflow.py  mg_log_reg_mf.py  mg_lrig_mf.py  mg_rig_mf.py  mg_weights.py  param_log_reg.py  param_log_reg_mf.py  param_rreg.py  sample_characteristics.py  scale_optimization.py  scale_param.py
src/machinegnostics/magnet/: __init__.py  activations.py  base_model.py  dataloader.py  device.py  gnostic_loss_core.py  gnostic_losses.py  gnostics_engine.py  initializers.py  keras_layers.py  layers.py  losses.py  metrics.py  model_io.py  module.py  optimizers.py  random.py  saver.py  tensor.py
src/machinegnostics/metrics/: __init__.py  accu.py  accuracy.py  auto_correlation.py  auto_covariance.py  cls_report.py  conf_matrix.py  correlation.py  cross_variance.py  divi.py  entropy.py  evalmet.py  f1_score.py  gcorrelation.py  gmmfe.py  hc.py  mae.py  mean.py  median.py  mg_r2.py  mse.py  precision.py  r2.py  recall.py  rmse.py  robr2.py  silhouette_score.py  stationarity_test.py  std.py  variance.py
src/machinegnostics/models/: __init__.py  base_io_models.py  base_model.py  cross_validation.py  data_split.py  mg_logreg.py  mg_lrig.py  mg_rig.py  mg_rob_reg.py
src/magcal/: Scale_Opt.py  __init__.py  base.py  characteristics.py  criteria_eval.py  criterion.py  data_conversion.py  gacov.py  gcor.py  gcov.py  gmed.py  gmodulus.py  gvar.py  linreg.py  location_para.py  mg_characteristics.py  mg_weights.py  param_rreg.py  roblinreg.py  sample_characteristics.py  scale_param.py
src/metrics/: __init__.py  accu.py  divi.py  evalmet.py  gmmfe.py  hc.py  mae.py  mg_r2.py  mse.py  r2.py  rmse.py  robr2.py
src/models/: __init__.py  cross_validation.py  mg_rig.py
tests/.checks/: check3.ipynb  check5.ipynb  chekc2.ipynb
tests/checks/: check1.ipynb  check4.ipynb  check6.ipynb  check_7.ipynb  ques.md
tests/exm/: eval_test.ipynb  mglr_test.ipynb  mgrm_test.ipynb  rob_reg.ipynb  rreg.ipynb
tests/models/: eval_test.ipynb  gmed_test.ipynb  mglr_test.ipynb  mgr_test.ipynb  mgr_test_1.ipynb  mgrm_test.ipynb  test_logreg.py  test_mg_metrics.py  test_mg_rig.py
tests/models/robust_regressor_model.pkl/: model.pkl
tutorials/: tutorial_magcal_01_gnostic_metrics.ipynb  tutorial_magcal_02_gnostic_distribution_functions.ipynb  tutorial_magcal_03_gnostic_data_homogeneity_test.ipynb  tutorial_magcal_04_gnostic_homoscedasticity_test.ipynb  tutorial_magcal_05_gnostic_data_membership_test.ipynb  tutorial_magcal_06_gnostic_marginal_cluster_analysis.ipynb  tutorial_magcal_08_gnostic_uncertainty_interval_analysis.ipynb  tutorial_models_03_wine_quality_linear_regression.ipynb  tutorial_models_04_logistic_regression.ipynb  tutorial_models_06_multiclass_classification.ipynb  tutorial_models_07_kmeans_clustering.ipynb  tutorial_models_08_decision_tree_classifier.ipynb  tutorial_models_09_decision_tree_regressor.ipynb  tutorial_models_10_random_forest_classifier.ipynb  tutorial_models_11_random_forest_regressor.ipynb  tutorial_models_12_boosting_classifier.ipynb  tutorial_models_13_boosting_regressor.ipynb  tutorial_models_14_autoregressor_time_series.ipynb  tutorial_models_17_gnostic_local_clustering.ipynb
v0.0/: 404.html  index.html  sitemap.xml
v0.0/SECURITY/: index.html
v0.0/assets/javascripts/: bundle.13a4f30d.min.js
v0.0/contact/: index.html
v0.0/da/cluster_analysis/: index.html
v0.0/da/da_models/: index.html
v0.0/da/data_cluster/: index.html
v0.0/da/data_interval/: index.html
v0.0/da/egdf/: index.html
v0.0/da/eldf/: index.html
v0.0/da/homogeneity/: index.html
v0.0/da/interval_analysis/: index.html
v0.0/da/membership/: index.html
v0.0/da/qgdf/: index.html
v0.0/da/qldf/: index.html
v0.0/da/scedasticity/: index.html
v0.0/datasets/animal_data/: index.html
v0.0/datasets/anscombe_data/: index.html
v0.0/home/: index.html
v0.0/installation/: index.html
v0.0/search/: search_index.json
v0.0/stylesheets/: extra.css
(+256 files in other folders)
