[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machinegnostics"
version = "0.0.8"
description = "Machine Gnostics is an open-source initiative that seeks to redefine the mathematical underpinnings of machine learning. While most conventional ML libraries are grounded in probabilistic and statistical frameworks, Machine Gnostics explores alternative paradigms—drawing from Mathematical Gnostics"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Nirmal Parmar", email="machinegnostics@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
keywords = [
    "machine learning", 
    "AI", 
    "data science", 
    "data analysis", 
    "deep learning", 
    "neural networks", 
    "ML",
    "Machine Gnostics",
    "Mathematical Gnostics"
]
dependencies = [
    "alembic",
    "annotated-types",
    "anyio",
    "appnope",
    "asttokens",
    "babel",
    "backports.tarfile",
    "backrefs",
    "blinker",
    "build",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "click",
    "cloudpickle",
    "colorama",
    "comm",
    "contourpy",
    "cycler",
    "databricks-sdk",
    "debugpy",
    "decorator",
    "Deprecated",
    "docker",
    "docutils",
    "executing",
    "fastapi",
    "Flask",
    "fonttools",
    "ghp-import",
    "gitdb",
    "GitPython",
    "google-auth",
    "graphene",
    "graphql-core",
    "graphql-relay",
    "gunicorn",
    "h11",
    "id",
    "idna",
    "importlib_metadata",
    "iniconfig",
    "ipykernel",
    "ipython",
    "ipython_pygments_lexers",
    "itsdangerous",
    "jaraco.classes",
    "jaraco.context",
    "jaraco.functools",
    "jedi",
    "Jinja2",
    "joblib",
    "jupyter_client",
    "jupyter_core",
    "keyring",
    "kiwisolver",
    "Mako",
    "Markdown",
    "markdown-it-py",
    "MarkupSafe",
    "matplotlib",
    "matplotlib-inline",
    "mdurl",
    "mergedeep",
    "mkdocs",
    "mkdocs-get-deps",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mlflow",
    "mlflow-skinny",
    "more-itertools",
    "nest-asyncio",
    "nh3",
    "numpy",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "packaging",
    "paginate",
    "pandas",
    "parso",
    "pathspec",
    "pexpect",
    "pillow",
    "platformdirs",
    "pluggy",
    "prompt_toolkit",
    "protobuf",
    "psutil",
    "ptyprocess",
    "pure_eval",
    "py4j",
    "pyarrow",
    "pyasn1",
    "pyasn1_modules",
    "pydantic",
    "pydantic_core",
    "Pygments",
    "pymdown-extensions",
    "pyparsing",
    "pyproject_hooks",
    "pyspark",
    "pytest",
    "python-dateutil",
    "pytz",
    "PyYAML",
    "pyyaml_env_tag",
    "pyzmq",
    "readme_renderer",
    "requests",
    "requests-toolbelt",
    "rfc3986",
    "rich",
    "rsa",
    "scipy",
    "six",
    "smmap",
    "sniffio",
    "SQLAlchemy",
    "sqlparse",
    "stack-data",
    "starlette",
    "threadpoolctl",
    "tornado",
    "traitlets",
    "typing-inspection",
    "typing_extensions",
    "tzdata",
    "ucimlrepo",
    "urllib3",
    "uvicorn",
    "watchdog",
    "wcwidth",
    "Werkzeug",
    "wrapt",
    "zipp"
]

[project.urls]
Homepage = "https://github.com/MachineGnostics"
Issues = "https://github.com/MachineGnostics/machinegnostics"