[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machinegnostics"
version = "0.0.12"
description = "Machine Gnostics is an open-source initiative that seeks to redefine the mathematical underpinnings of machine learning. While most conventional ML libraries are grounded in probabilistic and statistical frameworks, Machine Gnostics explores alternative paradigms—drawing from Mathematical Gnostics"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Nirmal Parmar", email="machinegnostics@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
keywords = [
    "machine learning", 
    "AI", 
    "data science", 
    "data analysis", 
    "deep learning", 
    "neural networks", 
    "ML",
    "Machine Gnostics",
    "Mathematical Gnostics"
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "fastapi",
    "SQLAlchemy",
    "pydantic"
]

[project.urls]
Homepage = "https://github.com/MachineGnostics"
Issues = "https://github.com/MachineGnostics/machinegnostics"